<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_universe_background">

        <cn.edu.zust.dmt.tkm.views.widgets.combined.MyTopBar
            android:id="@+id/fragmentRegisterMyTopBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintDimensionRatio="9:1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/color_universe_foreground"
            app:myTopBarTitle="@string/string_universe_register"
            app:myTopBarShowLeftIcon="true"
            app:myTopBarLeftIcon="@drawable/icon_universe_back"/>

        <cn.edu.zust.dmt.tkm.views.widgets.combined.MyFormBar
            android:id="@+id/fragmentRegisterVoucherNameMyFormBar"
            app:layout_constraintTop_toBottomOf="@id/fragmentRegisterMyTopBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintDimensionRatio="17:2"
            android:layout_marginTop="@dimen/dimen_universe_form_margin_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:myFormBarTextSize="@dimen/dimen_universe_font_standard"
            app:myFormBarTitle="@string/string_universe_voucher"
            app:myFormBarHint="@string/string_fragment_register_voucher_hint"/>

        <cn.edu.zust.dmt.tkm.views.widgets.combined.MyFormBar
            android:id="@+id/fragmentRegisterVoucherTokenMyFormBar"
            app:layout_constraintTop_toBottomOf="@id/fragmentRegisterVoucherNameMyFormBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintDimensionRatio="17:2"
            android:layout_marginTop="@dimen/dimen_universe_form_margin_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:myFormBarTextSize="@dimen/dimen_universe_font_standard"
            app:myFormBarTitle="@string/string_universe_token"
            app:myFormBarHint="@string/string_fragment_register_token_hint"/>

        <Button
            android:id="@+id/fragmentRegisterSubmitButton"
            app:layout_constraintTop_toBottomOf="@id/fragmentRegisterVoucherTokenMyFormBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="@dimen/dimen_universe_form_margin_top"
            android:background="@color/color_universe_app_theme_color"
            android:text="@string/string_universe_register"
            android:textColor="@color/color_universe_foreground"
            style="@style/style_universe_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>