<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/fragmentSettingsUserBackgroundView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/color_universe_foreground"/>

    <ImageButton
        android:id="@+id/fragmentSettingsUserImageView"
        app:layout_constraintTop_toTopOf="@id/fragmentSettingsUserBackgroundView"
        app:layout_constraintBottom_toBottomOf="@id/fragmentSettingsUserBackgroundView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.16"
        app:layout_constraintDimensionRatio="1:1"
        android:padding="0dp"
        android:src="@drawable/picture_account_image"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/fragmentSettingsUserTextView"
        app:layout_constraintTop_toTopOf="@id/fragmentSettingsAccountImageButton"
        app:layout_constraintBottom_toBottomOf="@id/fragmentSettingsAccountImageButton"
        app:layout_constraintLeft_toRightOf="@id/fragmentSettingsUserImageView"
        app:layout_constraintRight_toLeftOf="@id/fragmentSettingsAccountImageButton"
        app:layout_constraintHorizontal_bias="0.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        tools:text="皮皮虾"/>

    <ImageButton
        android:id="@+id/fragmentSettingsAccountImageButton"
        app:layout_constraintTop_toTopOf="@id/fragmentSettingsUserImageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.08"
        app:layout_constraintDimensionRatio="1:1"
        android:padding="0dp"
        android:src="@drawable/icon_universe_more"
        android:scaleType="centerCrop"/>

    <cn.edu.zust.dmt.tkm.views.widgets.combined.MyMenuBar
        android:id="@+id/fragmentSettingsUIBackgroundView"
        app:layout_constraintTop_toBottomOf="@id/fragmentSettingsUserBackgroundView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="9:1"
        app:myMenuBarTitle="@string/string_fragment_settings_ui"
        app:myMenuBarIcon="@drawable/icon_fragment_settings_ui"/>

    <cn.edu.zust.dmt.tkm.views.widgets.combined.MyMenuBar
        android:id="@+id/fragmentSettingsNoticeBackgroundView"
        app:layout_constraintTop_toBottomOf="@id/fragmentSettingsUIBackgroundView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="9:1"
        app:myMenuBarTitle="@string/string_fragment_settings_notification"
        app:myMenuBarIcon="@drawable/icon_fragment_settings_notification"/>

    <cn.edu.zust.dmt.tkm.views.widgets.combined.MyMenuBar
        android:id="@+id/fragmentSettingsSecurityBackgroundView"
        app:layout_constraintTop_toBottomOf="@id/fragmentSettingsNoticeBackgroundView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="9:1"
        app:myMenuBarTitle="@string/string_fragment_settings_security"
        app:myMenuBarIcon="@drawable/icon_fragment_settings_security"/>

    <cn.edu.zust.dmt.tkm.views.widgets.combined.MyMenuBar
        android:id="@+id/fragmentSettingsUpdateBackgroundView"
        app:layout_constraintTop_toBottomOf="@id/fragmentSettingsSecurityBackgroundView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="9:1"
        app:myMenuBarTitle="@string/string_fragment_settings_update"
        app:myMenuBarIcon="@drawable/icon_fragment_settings_update"/>

    <cn.edu.zust.dmt.tkm.views.widgets.combined.MyMenuBar
        android:id="@+id/fragmentSettingsContactsBackgroundView"
        app:layout_constraintTop_toBottomOf="@id/fragmentSettingsUpdateBackgroundView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="9:1"
        app:myMenuBarTitle="@string/string_fragment_settings_contacts"
        app:myMenuBarIcon="@drawable/icon_fragment_settings_contacts"/>

</androidx.constraintlayout.widget.ConstraintLayout>