<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_universe_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/activityLoginCardFrameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            app:cardBackgroundColor="@color/color_universe_foreground"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8" />

        <RadioGroup
            android:id="@+id/activityLoginStateRadioGroup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/activityLoginCardFrameLayout"
            app:layout_constraintDimensionRatio="4:1"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="@+id/activityLoginCardFrameLayout"
            app:layout_constraintRight_toRightOf="@+id/activityLoginCardFrameLayout"
            app:layout_constraintTop_toTopOf="@+id/activityLoginCardFrameLayout"
            app:layout_constraintVertical_bias="0.16"
            app:layout_constraintWidth_percent="0.44">

            <RadioButton
                android:id="@+id/activityLoginLoginRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_activity_login_radio_button"
                android:button="@null"
                android:gravity="center"
                android:text="@string/string_activity_login_text_login"
                android:checked="true"
                android:textColor="@color/color_activity_login_radio_text"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/activityLoginRegisterRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:background="@drawable/background_activity_login_radio_button"
                android:textColor="@color/color_activity_login_radio_text"
                android:text="@string/string_activity_login_text_register"
                android:textSize="20sp" />

        </RadioGroup>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_activity_login_username"
            app:layout_constraintBottom_toBottomOf="@id/activityLoginPhoneNumberEditText"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@+id/activityLoginPhoneNumberEditText"
            app:layout_constraintTop_toTopOf="@id/activityLoginPhoneNumberEditText" />

        <EditText
            android:id="@+id/activityLoginPhoneNumberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:elevation="8dp"
            android:hint="@string/string_activity_login_hint_username"
            android:paddingStart="15dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/activityLoginCardFrameLayout"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintLeft_toLeftOf="@+id/activityLoginCardFrameLayout"
            app:layout_constraintRight_toRightOf="@id/activityLoginCardFrameLayout"
            app:layout_constraintTop_toTopOf="@+id/activityLoginCardFrameLayout"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintWidth_percent="0.5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_activity_login_password"
            app:layout_constraintBottom_toBottomOf="@id/activityLoginPasswordEditText"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/activityLoginPasswordEditText"
            app:layout_constraintTop_toTopOf="@id/activityLoginPasswordEditText" />

        <EditText
            android:id="@+id/activityLoginPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:elevation="8dp"
            android:hint="@string/string_activity_login_hint_password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/activityLoginCardFrameLayout"
            app:layout_constraintLeft_toLeftOf="@id/activityLoginPhoneNumberEditText"
            app:layout_constraintRight_toRightOf="@id/activityLoginPhoneNumberEditText"
            app:layout_constraintTop_toTopOf="@+id/activityLoginCardFrameLayout"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/activityLoginSubmitButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/color_universe_app_theme_color"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/string_activity_login_text_submit"
            android:textColor="@color/color_universe_foreground"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/activityLoginCardFrameLayout"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintLeft_toLeftOf="@+id/activityLoginCardFrameLayout"
            app:layout_constraintRight_toRightOf="@+id/activityLoginCardFrameLayout"
            app:layout_constraintTop_toTopOf="@+id/activityLoginCardFrameLayout"
            app:layout_constraintVertical_bias="0.84"
            app:layout_constraintWidth_percent="0.22" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>